--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:20.0.0'
     implementation(platform("com.google.firebase:firebase-bom:32.3.1"))
     implementation("com.google.firebase:firebase-auth")
+
+    //dependecny for Toast sms:
+    implementation 'com.github.GrenderG:Toasty:1.4.2'
 }
