--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,11 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+
+            url "https://jitpack.io"
+
+        }
     }
 }
 
