--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,18 @@ dependencies {
     //dependecny for Toast sms:
     implementation 'com.github.GrenderG:Toasty:1.4.2'
 
+    //dependecies for chat::
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+    implementation 'com.google.firebase:firebase-database:19.2.0'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
+
+    implementation 'com.google.android.material:material:1.4.0'
+
+
 
 }
