--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.3.1'
 
     implementation 'com.google.android.material:material:1.4.0'
+    implementation("com.squareup.okhttp3:okhttp:4.10.0")
+
 
 
 
