--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,22 +2,23 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.appsnipp.creativelogindesigns">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <!--Permission for recording audio and storage of audio in users device-->
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- Permission for recording audio and storage of audio in users device -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.STORAGE" />
 
     <application
-        android:networkSecurityConfig="@xml/network_security_config"
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".chat_page"
+            android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="false"
@@ -32,7 +33,7 @@
             android:name=".Dashboard"
             android:exported="false" />
         <activity
-            android:name=".chat_page"
+            android:name=".VideoCallPage"
             android:exported="true"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
