--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation("com.squareup.okhttp3:okhttp:4.10.0")
 
+    implementation 'org.apache.commons:commons-text:1.9'
+
+
 
 
 
