--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,7 @@ dependencies {
     implementation 'org.apache.commons:commons-text:1.9'
 
 
-
+    implementation "androidx.biometric:biometric:1.1.0"
 
 
 }
