--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,10 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.STORAGE" />
 
+    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
+    <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,7 +24,7 @@
             android:name=".chat_page"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".VideoCallPage"
             android:exported="false"
             android:label="@string/title_activity_chat_page"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -33,7 +37,7 @@
             android:name=".Dashboard"
             android:exported="false" />
         <activity
-            android:name=".VideoCallPage"
+            android:name=".LoginActivity"
             android:exported="true"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
