--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,21 +11,21 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/user_round"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/user_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".intro"
+            android:name=".LoginActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".VideoCallPage"
             android:exported="false" />
         <activity
             android:name=".chat_page"
-            android:exported="false" />
-        <activity
-            android:name=".VideoCallPage"
             android:exported="false"
             android:label="@string/title_activity_chat_page"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -38,7 +38,7 @@
             android:name=".Dashboard"
             android:exported="false" />
         <activity
-            android:name=".SignUpActivity"
+            android:name=".intro"
             android:exported="true"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -47,7 +47,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".SignUpActivity" />
     </application>
 
 </manifest>
